add package.json into root dir for heroku

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js",
+    "start": "node ./server/index.js",
     "test": "jest"
   },
   "dependencies": {
